Correct spacing of menu item

--- a/src/theme/Editor.css
+++ b/src/theme/Editor.css
@@ -6,10 +6,17 @@
 
 .editor__menu {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   color: var(--ifm-color-gray-200);
   background-color: var(--ifm-color-gray-900);
+}
+
+.editor__submenu {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .editor__group {
